terraform/modules/istio/authz/postgres-allow.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-postgres-connections
  namespace: prod 
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  action: ALLOW
  rules:
    - to :
