terraform/modules/istio/authz/vault-allow.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-vault-queries
  namespace: vault 
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
  action: ALLOW
  rules:
    - to :
